--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
 <body>
 <form method="post" action="get_overview.php">
     Email:<br>
-    <input type="email" name="user_password">
+    <input type="email" name="user_email" id="user_email">
     <br>
     Password:<br>
-    <input type="password" name="user_password">
+    <input type="password" name="user_password" id="user_password">
     <br><br>
     <input type="submit" value="Submit">
 </form>
