Display gradebook stuff

--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,13 @@
     Type:<br>
     <select name="type" id="type">
         <option value="classes">My Classes</option>
-        <option value="summary">Gradebook Summary</option>
+        <option value="summary">Classes Summary</option>
+        <option value="class_summary">Gradebook Summary</option>
+        <option value="class_detail">Gradebook Details</option>
     </select>
-
+    <br>
+    Gradebook Number (only for Gradebook Summary or Gradebook Details:<br>
+    <input type="tel" name="gradebookNumber" id="gradebookNumber">
     <br><br>
     <input type="submit" value="Submit">
 </form>
