Only format JSON if we are requesting from web ui
No need for JSON to be formatted when calling API

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     Gradebook Number (only for Gradebook Summary or Gradebook Details:<br>
     <input type="tel" name="gradebookNumber" id="gradebookNumber">
     <br><br>
-    <input type="submit" value="Submit">
+    <input type="submit" name="submit" id="submit" value="submit">
 </form>
 </body>
 </html>
