--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     </select>
     <br>
     Gradebook Number (only for Gradebook Summary or Gradebook Details:<br>
-    <input type="tel" name="gradebookNumber" id="gradebookNumber">
+    <input type="tel" name="gradebook_number" id="gradebook_number">
     <br><br>
     <input type="submit" name="submit" id="submit" value="submit">
 </form>
